; ModuleID = '/home/carl/AnghaBench/Provenance/Cores/Mupen64Plus/png/contrib/libtests/extr_pngimage.c_get_dp.c'
source_filename = "/home/carl/AnghaBench/Provenance/Cores/Mupen64Plus/png/contrib/libtests/extr_pngimage.c_get_dp.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.display = type { i32 }

@stderr = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [39 x i8] c"pngimage: internal error (no display)\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (%struct.display* (i32)* @get_dp to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal %struct.display* @get_dp(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.display*, align 8
  store i32 %0, i32* %2, align 4
  %4 = load i32, i32* %2, align 4
  %5 = call i64 @png_get_error_ptr(i32 %4)
  %6 = inttoptr i64 %5 to %struct.display*
  store %struct.display* %6, %struct.display** %3, align 8
  %7 = load %struct.display*, %struct.display** %3, align 8
  %8 = icmp eq %struct.display* %7, null
  br i1 %8, label %9, label %13

9:                                                ; preds = %1
  %10 = load i32, i32* @stderr, align 4
  %11 = call i32 @fprintf(i32 %10, i8* getelementptr inbounds ([39 x i8], [39 x i8]* @.str, i64 0, i64 0))
  %12 = call i32 @exit(i32 99) #3
  unreachable

13:                                               ; preds = %1
  %14 = load %struct.display*, %struct.display** %3, align 8
  ret %struct.display* %14
}

declare dso_local i64 @png_get_error_ptr(i32) #1

declare dso_local i32 @fprintf(i32, i8*) #1

; Function Attrs: noreturn
declare dso_local i32 @exit(i32) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
